[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"
descriptionn = "Http web server built in rust"

[dependencies]
# async
async-trait = "0.1.57"
futures = "0.3.24"
pin-project = "1.0.12"

# core
tokio = { version = "1.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }

# data
bytes = { version = "1.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# http
hyper = { version = "0.14.20", features = ["full"] }

# utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
